welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: illegal start of simple expression
  if (a==b & a==c & b=c=){
                        ^greenTicket:8: error: ')' expected but '}' found.
} 
^